# axis

./: .clang-format  .clang-tidy  AGENTS.md  CMakeLists.txt  README.md  SPEC.md
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: build.yml  release-pr.yml  release.yml
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/application/: AxisParameterStore.cpp  AxisParameterStore.h
src/domain/: AxisParameterModel.cpp  AxisParameterModel.h  AxisParameters.cpp  AxisParameters.h
src/dsp/: AxisProcessorCore.cpp  AxisProcessorCore.h
src/infrastructure/: JuceParameterLayout.cpp  JuceParameterLayout.h  JucePluginState.cpp  JucePluginState.h
src/ui/components/: LevelMeter.cpp  LevelMeter.h
tests/: AxisParametersTests.cpp  AxisProcessorCoreTests.cpp  TestMain.cpp
